# kram

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _clang-format  _clang-format-ignore
hlslparser/: CMakeLists.txt  README.md  build.ninja  buildShaders.sh  hlslparser.vcxproj  hlslparser.vcxproj.filters
hlslparser/hlslparser.xcodeproj/: project.pbxproj
hlslparser/hlslparser.xcworkspace/: contents.xcworkspacedata
hlslparser/outshaders/: DepthTest.metal  ShaderHLSL.h  ShaderMSL.h
hlslparser/shaders/: Compute.hlsl  Sample.hlsl  ShaderHLSL.h  ShaderMSL.h  Skinning.hlsl
hlslparser/src/: CodeWriter.cpp  CodeWriter.h  Engine.cpp  Engine.h  GLSLGenerator.cpp  HLSLGenerator.cpp  HLSLGenerator.h  HLSLParser.cpp  HLSLParser.h  HLSLTokenizer.cpp  HLSLTokenizer.h  HLSLTree.cpp  HLSLTree.h  MSLGenerator.cpp  MSLGenerator.h  Main.cpp
hlslparser/testshaders.xcodeproj/: project.pbxproj
kram/: CMakeLists.txt  KramMain.cpp
kram-thumb-win/: CMakeLists.txt  Dll.cpp  Dll.rc  KramThumbProvider.cpp  KramThumbProvider.def  LICENSE  README.md  resource.h
kramc/: CMakeLists.txt  KramMain.cpp
kramv/: CMakeLists.txt  Info.plist  KramLoader.h  KramLoader.mm  KramRenderer.h  KramRenderer.mm  KramShaders.h  KramShaders.metal  KramViewerBase.cpp  KramViewerBase.h  KramViewerMain.mm  KramZipHelper.cpp  miniz.cpp
kramv/Base.lproj/: Main.storyboard
kramv/Shaders/: KramShaders.h  KramShaders.metal  hdr.metal  pbr.metal  skybox.metal
kramv/Textures/: piazza_san_marco.ktx  tropical_beach.ktx
libkram/: CMakeLists.txt
libkram/allocate/: dlmalloc.cpp  dlmalloc.h
libkram/astc-encoder/: astcenc_diagnostic_trace.cpp  astcenc_diagnostic_trace.h  astcenc_entry.cpp  astcenc_image.cpp  astcenc_integer_sequence.cpp  astcenc_internal.h  astcenc_mathlib.cpp  astcenc_mathlib.h  astcenc_mathlib_softfloat.cpp  astcenc_pick_best_endpoint_format.cpp  astcenc_platform_isa_detection.cpp  astcenc_vecmathlib.h  astcenc_vecmathlib_avx2_8.h  astcenc_vecmathlib_neon_armv7_4.h  astcenc_vecmathlib_none_4.h  astcenc_vecmathlib_sse_4.h  astcenc_weight_align.cpp
libkram/ate/: ateencoder.h  ateencoder.mm
libkram/bc7enc/: bc7decomp.cpp  bc7decomp.h  bc7enc.cpp  ert.cpp  ert.h  rdo_bc_encoder.cpp  rdo_bc_encoder.h  rgbcx.cpp  rgbcx.h  utils.cpp  utils.h
libkram/etc2comp/: Etc.cpp  EtcBlock4x4.cpp  EtcBlock4x4.h  EtcBlock4x4Encoding.cpp  EtcBlock4x4Encoding.h  EtcBlock4x4EncodingBits.h  EtcBlock4x4Encoding_ETC1.cpp  EtcBlock4x4Encoding_ETC1.h  EtcBlock4x4Encoding_R11.cpp  EtcBlock4x4Encoding_R11.h  EtcBlock4x4Encoding_RG11.cpp  EtcBlock4x4Encoding_RG11.h  EtcBlock4x4Encoding_RGB8.cpp  EtcBlock4x4Encoding_RGB8.h  EtcBlock4x4Encoding_RGB8A1.cpp  EtcBlock4x4Encoding_RGB8A1.h  EtcBlock4x4Encoding_RGBA8.cpp  EtcBlock4x4Encoding_RGBA8.h  EtcColor.h  EtcColorFloatRGBA.h  EtcConfig.h  EtcDifferentialTrys.cpp  EtcErrorMetric.h  EtcImage.cpp  EtcImage.h  EtcIndividualTrys.cpp
libkram/fastl/: LICENSE  falgorithm.h  fstring.h  map.h  pair.h  set.h  unordered_map.h  unordered_set.h  vector.h
libkram/fmt/: fmt.cpp  format.cpp  format.h  os.cpp
libkram/heman/: hedistance.cpp  hedistance.h
libkram/json11/: json11.cpp  json11.h
libkram/kram/: BlockedLinearAllocator.cpp  BlockedLinearAllocator.h  ImmutableString.cpp  ImmutableString.h  KTXImage.cpp  KTXImage.h  KTXMipper.cpp  KTXMipper.h  Kram.cpp  Kram.h  KramConfig.h  KramDDSHelper.cpp  KramDDSHelper.h  KramFileHelper.cpp  KramFileHelper.h  KramFileIO.cpp  KramFileIO.h  KramFmt.h  KramImage.cpp  KramImage.h  KramImageInfo.cpp  KramImageInfo.h  KramLib.h  KramLog.cpp  KramLog.h  KramMipper.cpp  KramMipper.h  KramMmapHelper.cpp  KramMmapHelper.h  KramPrefix.h  KramPrefix.pch  KramSDFMipper.cpp  KramSDFMipper.h  KramThreadPool.cpp  KramThreadPool.h  KramTimer.cpp  KramTimer.h  KramVersion.h  KramZipHelper.cpp  KramZipHelper.h  (+10 more)
libkram/lodepng/: lodepng.cpp  lodepng.h
libkram/miniz/: miniz.cpp  miniz.h
libkram/simdjson/: simdjson.h
libkram/squish/: alpha.cpp  clusterfit.cpp  clusterfit.h  colourfit.cpp  colourfit.h  maths.cpp  maths.h  singlecolourfit.cpp  singlecolourfit.h  squish.cpp  squish.h  squishgen.cpp  squishtest.cpp
libkram/tmpfileplus/: tmpfileplus.cpp
libkram/transcoder/: basisu.h  basisu_containers.h  basisu_containers_impl.h  basisu_global_selector_palette.h  basisu_transcoder.cpp  basisu_transcoder.h
libkram/vectormath/: README.md  bounds234.cpp  bounds234.h  double234.cpp  double234.h  float234.cpp  float234.h  float4a.cpp  float4a.h  half234.h  int234.h  long234.h  module.modulemap  sse2neon-arm64.h  sse2neon.h  sse_mathfun.h  vectormath++.cpp  vectormath++.h  vectormath234.cpp  vectormath234.h
libkram/zstd/: zstd.cpp  zstd.h  zstddeclib.cpp
plugin/: CMakeLists.txt
plugin/kps/: KPS.cpp  KPS.h  KPS.r  KPSScripting.cpp  KPSTerminology.h  KPSUI.h  KPSVersion.h  kram-ps.rsrc
source/: CMakeLists.txt
source/app/: CMakeLists.txt  KramMain.cpp
source/astc-encoder/: astcenc.h  astcenc_block_sizes2.cpp  astcenc_compress_symbolic.cpp  astcenc_compute_variance.cpp  astcenc_decompress_symbolic.cpp  astcenc_ideal_endpoints_and_weights.cpp  astcenc_image.cpp  astcenc_pick_best_endpoint_format.cpp  astcenc_symbolic_physical.cpp  astcenc_weight_align.cpp
source/ate/: ateencoder.h  ateencoder.mm
source/bc7enc/: bc7enc.cpp  bc7enc.h  rgbcx.h
source/etc2comp/: Etc.cpp  EtcBlock4x4.cpp  EtcBlock4x4.h  EtcBlock4x4Encoding.cpp  EtcBlock4x4Encoding.h  EtcBlock4x4Encoding_ETC1.cpp  EtcBlock4x4Encoding_ETC1.h  EtcBlock4x4Encoding_R11.cpp  EtcBlock4x4Encoding_R11.h  EtcBlock4x4Encoding_RG11.cpp  EtcBlock4x4Encoding_RG11.h  EtcBlock4x4Encoding_RGB8.cpp  EtcBlock4x4Encoding_RGB8.h  EtcBlock4x4Encoding_RGB8A1.cpp  EtcBlock4x4Encoding_RGB8A1.h  EtcBlock4x4Encoding_RGBA8.cpp  EtcBlock4x4Encoding_RGBA8.h  EtcColorFloatRGBA.h  EtcDifferentialTrys.cpp  EtcErrorMetric.h  EtcImage.cpp  EtcImage.h  EtcIndividualTrys.cpp
source/heman/: hedistance.cpp
source/kram/: KTXImage.cpp  KTXImage.h  KTXMipper.cpp  KTXMipper.h  Kram.cpp  Kram.h  KramConfig.h  KramFileHelper.cpp  KramFileHelper.h  KramImage.h  (+16 more)
(+397 files in other folders)
